feat(docs): add API documentation using DRF's built-in coreapi support
- Install coreapi and update requirements.txt
- Configure include_docs_urls under /api-docs/
- Set documentation title to 'api sample'
- Enable browsable, self-descriptive API reference for developers

--- a/BlogProject/requirements.txt
+++ b/BlogProject/requirements.txt
@@ -5,7 +5,9 @@ django-robots==6.1
 pillow==12.0.0
 psycopg2-binary==2.9.11
 python-decouple==3.8
+coreapi==2.3.3
 
+setuptools
 djangorestframework
 markdown
 django-filter
