feat(docs): replace coreapi with drf-yasg for OpenAPI 3.0 documentation
- Install and configure drf-yasg in settings and urls
- Enable Swagger UI and ReDoc endpoints for interactive API docs
- Generate and save OpenAPI schema to output.json for external use
- Align documentation with industry standards (OpenAPI/Swagger)

--- a/BlogProject/requirements.txt
+++ b/BlogProject/requirements.txt
@@ -1,13 +1,18 @@
+# general modules
 Django==5.2.7
-django-debug-toolbar==6.1.0
-django-extensions==4.1
-django-robots==6.1
 pillow==12.0.0
 psycopg2-binary==2.9.11
 python-decouple==3.8
+djangorestframework
+setuptools
+
+# third party modules
+drf-yasg[validation]
+django-filter
+django-debug-toolbar==6.1.0
+django-extensions==4.1
+django-robots==6.1
+markdown
 coreapi==2.3.3
 
-setuptools
-djangorestframework
-markdown
-django-filter
+# development module
