--- a/BlogProject/.devcontainer/docker-compose.yml
+++ b/BlogProject/.devcontainer/docker-compose.yml
@@ -25,5 +25,21 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  smtp4dev:
+    image: rnwood/smtp4dev:v3
+    restart: always
+    ports:
+      - '127.0.0.1:5000:80'    # Web interface
+      - '127.0.0.1:2525:25'    # SMTP server (using non-standard port)
+      - '127.0.0.1:1333:143'   # IMAP server (using non-standard port)
+      - '127.0.0.1:8024:110'   # POP3 server (using non-standard port)
+    volumes:
+      - smtp4dev-data:/smtp4dev
+    environment:
+      # Container configuration (this binds within the container)
+      - ServerOptions__Urls=http://*:80
+      - ServerOptions__HostName=smtp4dev
+
 volumes:
   postgres-data:
+  smtp4dev-data:
