--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,40 +19,42 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Start services (Compose v2)
+      # Use the compose file that lives under BlogProject/.devcontainer
       - name: Build & start services
         run: |
-          docker compose up -d --build
-          docker compose ps
+          docker compose -f BlogProject/.devcontainer/docker-compose.yml up -d --build
+          docker compose -f BlogProject/.devcontainer/docker-compose.yml ps
 
-      # Wait for Postgres to accept connections (no healthcheck required)
+      # Wait for Postgres to accept connections (no compose healthcheck required)
       - name: Wait for Postgres
         run: |
           echo "Waiting for Postgres to be ready..."
           for i in {1..30}; do
-            if docker compose exec -T db pg_isready -U postgres -d AdvancedBlogProject; then
+            if docker compose -f BlogProject/.devcontainer/docker-compose.yml exec -T db \
+              pg_isready -U postgres -d AdvancedBlogProject; then
               echo "Postgres is ready."
               exit 0
             fi
             sleep 2
           done
           echo "Postgres did not become ready in time."
-          docker compose logs --no-color db
+          docker compose -f BlogProject/.devcontainer/docker-compose.yml logs --no-color db
           exit 1
 
-      # Run lint + tests inside backend container
+      # Run lint and tests inside the backend container
       - name: Run lint and tests
         run: |
-          docker compose exec -T backend sh -c "flake8 && pytest -q"
+          docker compose -f BlogProject/.devcontainer/docker-compose.yml exec -T backend \
+            sh -c "flake8 && pytest -q"
 
-      # Dump logs on failure for easier debugging
+      # Print logs on failure for easier debugging
       - name: Show logs on failure
         if: failure()
         run: |
-          docker compose logs --no-color
+          docker compose -f BlogProject/.devcontainer/docker-compose.yml logs --no-color
 
-      # Always cleanup containers/volumes
+      # Always cleanup containers/volumes to keep runner clean
       - name: Shutdown
         if: always()
         run: |
-          docker compose down -v
+          docker compose -f BlogProject/.devcontainer/docker-compose.yml down -v
