--- a/BlogProject/.devcontainer/docker-compose.yml
+++ b/BlogProject/.devcontainer/docker-compose.yml
@@ -40,6 +40,20 @@ services:
       - ServerOptions__Urls=http://*:80
       - ServerOptions__HostName=smtp4dev
 
+  master:
+    image: locustio/locust
+    ports:
+      - "8089:8089"
+    volumes:
+      - ../load_tests:/mnt/locust
+    command: -f /mnt/locust/locustfile.py --master -H http://backend:8000
+
+  worker:
+    image: locustio/locust
+    volumes:
+      - ../load_tests:/mnt/locust
+    command: -f /mnt/locust/locustfile.py --worker --master-host master
+
 volumes:
   postgres-data:
   smtp4dev-data:
